# MoSync

./: .gitignore  MoSync.sln  MoSync2010.sln  MoSyncRules.props  MoSyncRules.rules  MoSyncRules.targets  MoSyncRules.xml  configure.sh  other_licenses.txt  rakefile.rb  workfile.rb
build_rules/: common.rb  defaults.rb  error.rb  host.rb  loader_md.rb  mosync.rb  mosync_common.rb  native.rb  native_mosync.rb  pipe.rb  static_java.rb  subdirs.rb  subdirs_mosync.rb  util.rb
docs/: MoSyncDeveloperGuide.tex  build_doc_osx.sh  changelog.txt  extensions.txt  genPanic.sh  gendox.bat  gendox.rb  gendox.sh  genidl.sh  hacking.txt  index.php  internals.dot  known_issues.txt  mingw.txt  newlib.txt  pim_intro.txt  release_notes.txt  rescomp.doc  run.bat  timedgen.sh  workfile.comments.rb
examples/: build-all.bat  examples.list  examples.sln  parse_example_list.rb  rakefile.rb  workfile.rb
githooks/: checkUser.rb  checkUtf8.rb  my-pre-commit.rb  pre-commit  writeAttributeFile.rb
intlibs/: sdl_sound.patch
intlibs/dgles-0.5/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac  dgles.dev  dgles.sln  dgles.vcproj  dgles.vcxproj  dgles.vcxproj.filters  simple.dev  simple.vcproj  workfile.rb
intlibs/dgles-0.5/GLES/: Makefile.am  gl.h
intlibs/dgles-0.5/src/: Makefile.am  api.h  array.c  buffer.c  dgl.h  draw.c  get.c  glesapi.c  light.c  load.h  material.c  matrix.c  posix.c  state.h  texture.c  win32.c
intlibs/dgles-0.5/tests/: Makefile.am  errors.c  pointsize.c  sdlstub.c  simple.c
libs/: Doxyfile  build.bat  buildD.bat  copyHeaders.bat  copyHeaders.sh  delete_header.bat  mafs_build.bat  mastd_build.bat  matest_build.bat  maui_build.bat  mautil_build.bat  mtx_build.bat  prepareMAStdNative.rb  rakefile.rb  run.bat  workfile.rb
rules/: defaults.rb  dll.rb  error.rb  exe.rb  flags.rb  gcc.rb  gcc_flags.rb  githooks.rb  host.rb  loader_md.rb  mosync_exe.rb  mosync_lib.rb  mosync_resources.rb  mosync_util.rb  native_gcc.rb  native_lib.rb  native_link.rb  native_mosync.rb  pipe.rb  profiles.rb  readme.txt  targets.rb  task.rb  util.rb
skins/: more_config.xml
testPrograms/: bdir.bat  bogokips.c  bttest.c  build.bat  buildbase.bat  buildprep.bat  comb.bat  copyProgram.bat  cpp.cpp  crashCpp.cpp  debug_test.c  done.txt  empty.lst  er_samuel.c  ertest.c  exec-next-test.c  fptest.c  gpstest.c  hello.c  hello.cpp  prever.bat  (+16 more)
testPrograms/faxpp/faxpp-0.2/include/: Makefile.am  Makefile.in
testPrograms/faxpp/faxpp-0.2/include/faxpp/: error.h  event.h  parser.h  text.h  token.h  tokenizer.h  transcode.h
tools/MoCab/lcab/: Makefile  Makefile.am  Makefile.in  README  cdata.c  cdata.h  cfile.c  cfile.h  cfolder.c  cfolder.h  cheader.c  cheader.h  checksum.c  checksum.h  config.h.in  configure  configure.ac  cstruct.h  cwrite.c  cwrite.h  lcab.1  lcab.vcproj  main.c  mytypes.h  warn.c  warn.h
tools/MoCab/lcab/dirent/: msdirent.vcproj  printdir.c
tools/MoCab/lcab/getopt/: getopt.c  getopt.h
(+7462 files in other folders)
